# quant_lab

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  UI_WISHLIST.md  __init__.py  conftest.py  pyproject.toml  requirements.txt  start.bat  start.ps1
_migration_log/: EQUITY_SLEEVE_GLOBAL_DECISION.md  INDEX.md  PHASE1_REPORT.md  PHASE2_5_REPORT.md  PHASE2_FIX_REPORT.md  PHASE2_REPORT.md  PHASE3_REPORT.md  QUALITY_STOCKS_REFINEMENT_REPORT.md  SECURITY_AUDIT.md  V2_1_0_DIRECTA_IMPORT.md  V2_UX_REFACTOR.md  V3_0_0_SIMPLIFICATION.md  V3_0_1_BONDS_REFRESH_REAL.md  V3_1_0_BONDS_SIMPLIFICATION.md  V3_1_1_LADDER_BUILDER_REFINEMENTS.md  V3_1_2_OPTIMAL_PARAMS.md  V3_2_0_PDF_EXPORT.md  V3_2_1_UX_FIXES.md  V5_FULL_VALIDATION_REPORT.md  V5_SURVIVORSHIP_VALIDATION_REPORT.md  V5_VS_SPY_DECISION.md  bonds_db_data_gaps.md  cleanup_inventory.md  lint_residuals.md  missing_docstrings.md  v320_kaleido_issue.md
configs/: allocation.yaml  global.yaml  portfolio.yaml  providers.yaml  quality_stocks_v2_faster_trend.yaml  quality_stocks_v3_short_momentum.yaml  quality_stocks_v4_no_bond_fallback.yaml  quality_stocks_v5_combined.yaml  quality_stocks_v5_survivorship.yaml
core/: __init__.py
docs/: adding_a_strategy.md  architecture.md  archived_strategies.md  data_layer.md
portfolio/: README.md  __init__.py  aggregator.py  allocator.py  master_allocator.py  position_tracker.py  price_provider.py  reconciliation.py  reporting.py  state.py  static_allocator.py
reporting/: __init__.py  ladder_pdf.py
scripts/: audit_constituent_history.py  audit_fmp_data_coverage.py  compare_passive_allocations.py  extend_fundamentals_history.py  migrate_bonds_db.py  migrate_prices_to_fmp.py  refresh_bonds_db.py  run_backtests.py  run_quality_walk_forward.py  update_all_data.py  verify_fmp_connectivity.py  verify_fmp_setup.py
strategies/: __init__.py
tests/: test_analytics.py  test_core_backtest.py  test_data_providers.py  test_directa_importer.py  test_fmp_provider.py  test_integration_bonds.py  test_integration_quality_stocks.py  test_ladder.py  test_ladder_builder.py  test_ladder_pdf.py  test_portfolio_aggregator.py  (+3 more)
(+125 files in other folders)
