[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant_lab"
version = "0.1.0"
description = "Unified Python monorepo for quantitative trading strategies, backtesting, screening and analytics."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "valetudo" }]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "pyyaml>=6.0",
    "duckdb>=0.10",
    "yfinance>=0.2.40",
    "beautifulsoup4>=4.12",
    "pandera>=0.18",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "tqdm>=4.66",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.32",
    "plotly>=5.18",
]
scraping = [
    "selenium>=4.20",
    "webdriver-manager>=4.0",
    "flask>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

# Packaging layout — NOT USED in phase 1-2.
# Phase 1-2 runs directly from the repo root (sys.path bootstrap via
# conftest.py / ui/main.py); the project is not installed via `pip install -e .`.
# The section below is a flat-layout sketch reserved for a future phase
# when we decide to ship as an installable package. Until then, top-level
# packages are `core`, `strategies`, `portfolio`, `ui` — imported without prefix.
[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "strategies*", "portfolio*", "ui*"]
exclude = ["tests*", "_backups*", "_migration_log*", "outputs*", "logs*", "docs*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests", "strategies"]
python_files = ["test_*.py"]
# Skip the _archived/ tree — those tests reference module paths that no
# longer exist after Phase-4 archival.
norecursedirs = ["_archived", "_legacy", "_backups", ".venv", "__pycache__"]
addopts = "-ra --ignore=strategies/_archived --ignore=scripts/_archived"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]
